<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fro.room_sunalarmcase.MainActivity"
    android:orientation="vertical" >

    <!-- 周期 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:id="@+id/firstPs"
        android:paddingLeft="100dp"
        android:paddingStart="100dp"
        tools:ignore="RtlSymmetry">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:id="@+id/textview1"
                android:gravity="center"
                android:text="@string/collectCycleDsc" />

            <EditText
                android:id="@+id/time_et"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/textview1"
                android:gravity="center"
                android:maxLength="4"
                android:text="@string/collectCycle"
                android:inputType="number"
                >
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/time_et"
                android:gravity="center"
                android:text="@string/millisecond"
                android:layout_toEndOf="@+id/time_et" />
        </LinearLayout>
    </RelativeLayout>
    
    <!--第二部分-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondPs"
        android:layout_below="@+id/firstPs">
        <!-- 光照度 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/firstLine">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sun_ip"
                android:gravity="center"
                android:text="@string/sun_ipDsc" />

            <EditText
                android:id="@+id/sunIp_et"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sunIp"
                android:maxLength="15"
                >
            </EditText>
        
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sun_port"
                android:gravity="center"
                android:text="@string/port" />

            <EditText
                android:id="@+id/sunPort_et"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/port"
                android:maxLength="4"
                android:inputType="number"
                >
            </EditText>
        </LinearLayout>
    <!-- 数码管 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/secondLine"
            android:layout_below="@+id/firstLine">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tubeIp"
                android:gravity="center"
                android:text="@string/tubeIpDsc" />

            <EditText
                android:id="@+id/tubeIp_et"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tubeIp"
                android:maxLength="15"
                >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tubePort"
                android:gravity="center"
                android:text="@string/port" />

            <EditText
                android:id="@+id/tubePort_et"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/port"
                android:maxLength="4"
                android:inputType="number"
                >
            </EditText>
        </LinearLayout>
    
    <!-- 蜂鸣器 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/secondLine"
            android:id="@+id/thirdLine">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/buzzerIp"
                android:text="@string/BuzzerIpDsc" />

            <EditText
                android:id="@+id/buzzerIp_et"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/buzzerIp"
                android:maxLength="15"
                >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buzzerPort"
                android:gravity="center"
                android:text="@string/port" />

            <EditText
                android:id="@+id/buzzerPort_et"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/port"
                android:maxLength="4"
                android:inputType="number">
            </EditText>
        </LinearLayout>
    
    <!-- 窗帘 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/fourthLine"
            android:layout_below="@+id/thirdLine">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/curtainIp"
                android:text="@string/curtainIpDsc" />

            <EditText
                android:id="@+id/curtainIp_et"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/curtainIp"
                android:maxLength="15"
                >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/curtainPort"
                android:gravity="center"
                android:text="@string/port" />

            <EditText
                android:id="@+id/curtainPort_et"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/port"
                android:maxLength="4"
                android:inputType="number"
                >
            </EditText>
        </LinearLayout>
    </RelativeLayout>
    
    <!-- 光照值 Last line -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lines"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/secondPs">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:id="@+id/sun"
            android:gravity="center"
            android:text="@string/realSunDsc"
            android:paddingStart="40dp"
            tools:ignore="RtlSymmetry" />
        
        <TextView
            android:id="@+id/sun_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/sun"
            android:gravity="center"
            android:text="@string/realSun"
            android:layout_toEndOf="@+id/sun" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lux"
            android:layout_toRightOf="@+id/sun_tv"
            android:gravity="center"
            android:text="@string/sunLux"
            android:layout_toEndOf="@+id/sun_tv" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sumMaxDes"
            android:layout_toRightOf="@id/lux"
            android:gravity="center"
            android:text="@string/maxDsc"
            android:layout_toEndOf="@id/lux" />

        <EditText
            android:id="@+id/maxLim_et"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/sumMaxDes"
            android:gravity="center"
            android:text="@string/sunMax"
            android:maxLength="4"
            android:layout_toEndOf="@+id/sumMaxDes">
        </EditText>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/maxLim_et"
            android:id="@+id/both"
            android:gravity="center"
            android:text="@string/both"
            android:layout_toEndOf="@+id/maxLim_et" />
        
        <com.fro.room_sunalarmcase.view.PushSlideSwitchView  
        android:id="@+id/linkage_sw"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_toRightOf="@+id/both"
        android:layout_marginLeft="10dp"  
        android:layout_marginRight="10dp"
        android:enabled="true"
        android:layout_toEndOf="@+id/both" />
    
    <!-- 连接/断开 -->
        <ToggleButton
            android:id="@+id/connect_tb"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/both"
            android:backgroundTint="@color/gray"
            android:textOff="@string/connected"
            android:textOn="@string/open" />

        <TextView
            android:id="@+id/info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lux"
            android:layout_toRightOf="@+id/connect_tb"
            android:gravity="center"
            android:layout_alignBaseline="@+id/connect_tb"
            android:text="@string/statusBar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lux"
            android:id="@+id/spaces"
            android:layout_alignBaseline="@+id/connect_tb"
            android:layout_toRightOf="@+id/info_tv"
            android:text="@string/space"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dataDes"
            android:text="@string/store_Status"
            android:layout_toRightOf="@id/spaces"
            android:layout_alignBaseline="@+id/connect_tb"
            android:layout_below="@+id/lux"/>

        <com.fro.room_sunalarmcase.view.PushSlideSwitchView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/store_status"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_alignBaseline="@+id/dataDes"
            android:enabled="true"
            android:layout_toRightOf="@+id/dataDes"
            android:layout_below="@+id/lux"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_data"
            android:backgroundTint="@color/gray"
            android:id="@+id/show_data"
            android:layout_toRightOf="@id/store_status"
            android:layout_alignBaseline="@+id/connect_tb"
            android:layout_toEndOf="@id/store_status" />
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
</RelativeLayout>